--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="#" class="nav__logo">Bhawesh</a>
                 </div>
 
-                <div class="nav__menu" id="nav-menu">
+                <div class="nav__menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home" class="nav__link nav-link home active-link">Home</a></li>
                         <li class="nav__item "><a href="#about" class="nav__link nav-link about">About</a></li>
@@ -153,7 +153,7 @@
             </section>
 
             <!--===== WORK/PROJECT =====-->
-            <section class="work section" id="projects">
+            <!-- <section class="work section" id="projects">
                 <h2 class="section-title">Projects</h2>
 
                 <div class="work__container">
@@ -175,12 +175,134 @@
                             <h4> <a id="contact-github" href="https://sugar-cosmetic-by-dynamic-hub-4321.netlify.app/" class="fa-solid fa-globe project-deployed-link" aria-label="GitHub" target="_blank"> Deployment</a></h4>
                         </div>
                     </div>
-                   
-                    <!-- <a href="" class="work__img">
-                        <img src="assets/img/work3.jpg" alt="">
-                    </a> -->
+                    <div>
+                        <a href="" class="work__img">
+                            <img src="assets/img/Screenshot (81).png" alt="">
+                        </a>
+                        <div class="project-info">
+                            <h4> <a id="contact-github" href="https://github.com/BhaweshPandey-03/Tour-Travel" class="project-github-link fab fa-github" aria-label="GitHub" target="_blank"> GitHub</a></h4>
+                            <h4> <a  id="contact-github" href="https://code-yogi.netlify.app" class="fa-solid fa-globe project-deployed-link" aria-label="GitHub" target="_blank"> Deployment</a></h4>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="" class="work__img">
+                            <img src="assets/img/Screenshot (82).png" alt="">
+                        </a>
+                        <div class="project-info">
+                            <h4> <a id="contact-github" href="https://github.com/BhaweshPandey-03/sugar-cosmetics--clone" class="project-github-link fab fa-github" aria-label="GitHub" target="_blank"> GitHub</a></h4>
+                            <h4> <a id="contact-github" href="https://sugar-cosmetic-by-dynamic-hub-4321.netlify.app/" class="fa-solid fa-globe project-deployed-link" aria-label="GitHub" target="_blank"> Deployment</a></h4>
+                        </div>
+                    </div>
+                  
                 </div>
-            </section>
+            </section> -->
+            <section id="projects">
+                <h1>My <span class="boldtext red">Projects</span></h1>
+                <div class="pro-cards">
+                  <div class="project-card">
+                    <div class="pro-img">
+                      <img src="./assets/projects/digitalpay.png" />
+                    </div>
+                    <div class="pro-cont">
+                      <h1 class="boldtext project-num">01</h1>
+                      <h3 class="project-title boldtext">Digital Pay</h3>
+                      <p class="project-description">
+                        Digital Pay is an online payment portal facilitating swift
+                        transactions with features like sending money, transaction
+                        records, and inviting contacts. Utilizing HTML, CSS, JavaScript,
+                        and Bootstrap, it ensures a responsive interface. JSON server
+                        manages data, enabling user authentication via fetch and local
+                        storage for seamless data transmission.
+                      </p>
+                      <div class="project-tech-stack">
+                        <img src="./assets/skills/html.svg" /><img src="./assets/skills/css.svg" /><img
+                          src="./assets/skills/javascript.svg" />
+                      </div>
+                      <a href="https://github.com/uvsingh007/web-dev-ratna-8765" target="_blank" class="project-github-link">Github
+                        Repo</a>
+                      <a href="https://web-dev-ratna-8765-vlsn.vercel.app/" target="_blank" class="project-deployed-link">Deployed
+                        Link</a>
+                    </div>
+                  </div>
+                  <div class="project-card">
+                    <div class="pro-img">
+                      <img src="./assets/projects/apexcrafts.png" />
+                    </div>
+                    <div class="pro-cont">
+                      <h1 class="boldtext project-num">02</h1>
+                      <h3 class="project-title boldtext">Apex Crafts</h3>
+                      <p class="project-description boldtext">
+                        Apex Crafts is an online portfolio builder website designed to
+                        establish users' online presence effectively. Utilizing vibrant
+                        colors and smooth transitions, the desktop version offers a
+                        user-friendly and interactive experience. Its purpose is to
+                        showcase the services and projects of the Apex Crafts agency,
+                        aiding in client attraction and providing easily accessible online
+                        presence
+                      </p>
+                      <div class="project-tech-stack">
+                        <img src="./assets/skills/html.svg" /><img src="./assets/skills/css.svg" />
+                      </div>
+                      <a href="https://github.com/uvsingh007/hissing-copper-9121" target="_blank" class="project-github-link">Github
+                        Repo</a>
+                      <a href="https://hissing-copper-9121.vercel.app/" target="_blank" class="project-deployed-link">Deployed
+                        Link</a>
+                    </div>
+                  </div>
+                  <div class="project-card">
+                    <div class="pro-img">
+                      <img src="./assets/projects/digitalpay.png" />
+                    </div>
+                    <div class="pro-cont">
+                      <h1 class="boldtext project-num">03</h1>
+                      <h3 class="project-title boldtext">Digital Pay</h3>
+                      <p class="project-description">
+                        Digital Pay is an online payment portal facilitating swift
+                        transactions with features like sending money, transaction
+                        records, and inviting contacts. Utilizing HTML, CSS, JavaScript,
+                        and Bootstrap, it ensures a responsive interface. JSON server
+                        manages data, enabling user authentication via fetch and local
+                        storage for seamless data transmission.
+                      </p>
+                      <div class="project-tech-stack">
+                        <img src="./assets/skills/html.svg" /><img src="./assets/skills/css.svg" /><img
+                          src="./assets/skills/javascript.svg" />
+                      </div>
+                      <a href="https://github.com/uvsingh007/web-dev-ratna-8765" target="_blank"
+                        class="project-github-link red">Github Repo</a>
+                      <a href="https://web-dev-ratna-8765-vlsn.vercel.app/" target="_blank"
+                        class="project-deployed-link red">Deployed Link</a>
+                    </div>
+                  </div>
+                  <div class="project-card">
+                    <div class="pro-img">
+                      <img src="./assets/projects/apexcrafts.png" />
+                    </div>
+                    <div class="pro-cont">
+                      <h1 class="boldtext project-num">04</h1>
+                      <h3 class="project-title boldtext">Apex Crafts</h3>
+                      <p class="project-description boldtext">
+                        Apex Crafts is an online portfolio builder website designed to
+                        establish users' online presence effectively. Utilizing vibrant
+                        colors and smooth transitions, the desktop version offers a
+                        user-friendly and interactive experience. Its purpose is to
+                        showcase the services and projects of the Apex Crafts agency,
+                        aiding in client attraction and providing easily accessible online
+                        presence.
+                      </p>
+                      <div class="project-tech-stack">
+                        <img src="./assets/skills/html.svg" /><img src="./assets/skills/css.svg" />
+                      </div>
+                      <a href="https://github.com/uvsingh007/hissing-copper-9121" target="_blank" class="project-github-link">Github
+                        Repo</a>
+                      <a href="https://hissing-copper-9121.vercel.app/" target="_blank" class="project-deployed-link">Deployed
+                        Link</a>
+                    </div>
+                  </div>
+                </div>
+              </section>
+
+
             <section class="statistics">
                 <section class="statistics" id="statistics">
                     <h2 class="section-title">Statistics</h2>
