--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <h2 class="section-title">Skills</h2>
 
                 <div class="skills__container bd-grid">          
-                    <div>
+                    <div class=".skills-card">
                         <h2 class="skills__subtitle">Profesional Skills</h2>
                         <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p>
                         <div class="skills__data">
