--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                     
                 </div>
 
-                <div class="home__social">
-                    <a href="https://linkedin.com/in/bhawesh-pandey" target="_blank" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://www.instagram.com/_bhawesh.03_/?next=%2F" target="_blank" class="home__social-icon"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://github.com/bhaweshpandey-03" target="_blank" class="home__social-icon"><i class='bx bxl-github' ></i></a>
-                </div>
+                <!-- <div class="home__social">
+                    <a id="contact-linkedin" href="https://linkedin.com/in/bhawesh-pandey" target="_blank" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a  href="https://www.instagram.com/_bhawesh.03_/?next=%2F" target="_blank" class="home__social-icon"><i class="fa-brands fa-instagram"></i></a>
+                    <a  href="https://github.com/bhaweshpandey-03" target="_blank" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                </div> -->
 
                 <div class="home__img">
                     <svg class="home__blob" viewBox="0 0 479 467" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -66,7 +66,7 @@
                         </mask>
                         <g mask="url(#mask0)">
                             <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
-                            <image class="home__blob-img" x="50" y="60" href="./assets/img/no-backgroud-photo-2.png"/>
+                            <image class="home__blob-img home-img" x="50" y="60" href="./assets/img/no-backgroud-photo-2.png"/>
                         </g>
                     </svg>
                 </div>
