--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <li class="nav_item">
                         <button id="resume-button-1" class="nav-link resume">
                             <a href="./Resume/Bhawesh-Pandey-Resume.pdf" class="button-flex" id="resume-link-1"
-                            onclick="window.open('https://drive.google.com/file/d/1nmm36MIE7LZnDB-BvIiP00Nvylf2T8bS/view?usp=sharing')"
+                            onclick="window.open('https:drive.google.com/file/d/1iG6TdP6evbe9h48xk9ZFRkfJC4Za8dwi/view')"
                             target="_blank" download="Bhawesh-Pandey-Resume.pdf" >
                                 <i class="uil uil-download-alt nav_icon"></i> Resume
                             </a>
@@ -183,7 +183,7 @@
                     <div class="about_buttons">
                         <button class="button" id="resume-button-2">
                             <a href="./Resume/Bhawesh-Pandey-Resume.pdf" class="button-flex" id="resume-link-2"
-                                onclick="window.open('https://drive.google.com/file/d/1nmm36MIE7LZnDB-BvIiP00Nvylf2T8bS/view?usp=sharing')"
+                                onclick="window.open('https:drive.google.com/file/d/1iG6TdP6evbe9h48xk9ZFRkfJC4Za8dwi/view')"
                                 target="_blank" download="Bhawesh-Pandey-Resume.pdf">
                                 My Resume <i class="uil uil-download-alt button_icon"></i>
                             </a>
